fixed mobile alignment

--- a/modern.css
+++ b/modern.css
@@ -174,6 +174,11 @@ hr {
         width: 100vw;
         font-size: 1em;
         margin: 0;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+
     }
     #nav {
         display: none;
